Fixes icon weights and overflowing

--- a/.storybook/main.css
+++ b/.storybook/main.css
@@ -21,7 +21,7 @@
   }
 
   svg:not([class]) {
-    @apply fill-current stroke-current;
+    @apply fill-current stroke-none;
   }
 
   #root {
