--- a/src/components/common/Extensions/SubNavigation/SubNavigationItem/SubNavigationItemMobile.module.css
+++ b/src/components/common/Extensions/SubNavigation/SubNavigationItem/SubNavigationItemMobile.module.css
@@ -13,7 +13,7 @@
     @apply text-blue-400 cursor-pointer;
 
     & svg {
-      @apply fill-blue-400 stroke-blue-400;
+      @apply fill-blue-400;
     }
   }
 }
@@ -22,7 +22,7 @@
   @apply text-blue-400 font-semibold text-sm;
 
   & svg {
-    @apply fill-blue-400 stroke-blue-400;
+    @apply fill-blue-400;
   }
 }
 
